# brain-epilepsy-interface-react

./: .gitignore  README.md  package-lock.json  package.json
api/: backend.py
backend/: backend.py  bandPassFilter.py  explore.ipynb  fetchdata.py  peakFinder.py  peaks.py  wavelet.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/CommonComponents/: AdjacencyMatrix.js  AxisBottom.js  AxisLeft.js  LinePlot.js  (+3 more)
public/: index.html
spikexplorer-core/: .gitignore  README.md  poetry commands.txt  pyproject.toml  requirements.txt
spikexplorer-core/spikexplorer_core/: app.py  requirements.txt  services.py  similarity.py
spikexplorer-core/spikexplorer_core/core/: eeg.ipynb  eeg.py  patient.py  similarity.py
spikexplorer-core/spikexplorer_core/eeg/: eeg.py
spikexplorer-core/spikexplorer_core/preprocessing/: eeg_for_duck.py
spikexplorer-core/tests/: test_fetch_eeg.py
src/: App.css  App.js
src/CommonComponents/: AxisBottom.js  AxisLeft.js  LinePlot.js  MultiLineCreation.js
src/components/: AxisBottom.js  AxisLeft.js  BrainNetwork.js  BrainOBJRendering.js  BrainRendering.js  BrainWithElectrode.js  ComponentContainer.js  CreateTimePlots.js  EEGDataViewer.js  ENChordContainer.js  ENTContainer.js  ElectrodeChord.js  ElectrodeDropDown.js  ElectrodeNetworkChord3D.js  ElectrodeNetworkTumor.js  EventViewer.js  LinePlot.js  PropagationTimeSeries.js  TimeSliderButton.js  Transparent.js  geometryAndFace.js  shaders.js
src/data/: dataRegistry.json
src/models/: test.mtl
src/stories/: EventBarViewer.stories.jsx
(+968 files in other folders)
